# OpenCV_Test

./: CMakeLists.txt  openCV_test.sln
Harr_test/: CMakeLists.txt  HaarFeature.cpp  HaarFeature.h  HaarFeature.yaml  Harr  HarrTest.cpp  Harr_test.vcxproj  Harr_test.vcxproj.filters
Hist/: CMakeLists.txt  Hist.vcxproj  Hist.vcxproj.filters  hist.cpp  kmeans.cpp  mouse_callback.cpp  test.cpp  test2.cpp  test2.h  threshold.cpp
Project1/: Project1.vcxproj  源.cpp
Stereo/: Stereo.cpp  Stereo.vcxproj  Stereo.vcxproj.filters  StereoReconstructor.h
Stereo/stereoCalibration/stereo calibration20171130/: extrinsics.yml  intrinsics.yml  readme.txt  stereoParams20171130.mat  stereoParams20171130_2.mat  stereo_calib.xml  stereo_test.m
contour_test/: contour_test.cpp  contour_test.vcxproj  contour_test.vcxproj.filters
plot_test/: plot_test.cpp  plot_test.vcxproj  plot_test.vcxproj.filters
pupil_test/: CMakeLists.txt  DEPRECSTED.h  Harr_output  PupilDetectorHaar.cpp  PupilDetectorHaar.h  pupil_test.vcxproj  pupil_test.vcxproj.filters  test.cpp
usefulFunctions/: usefulFunctions.cpp  usefulFunctions.vcxproj  usefulFunctions.vcxproj.filters
video_IO/: CMakeLists.txt  video_IO.vcxproj  源.cpp
